appcds/redefineClass/RedefineRunningMethods_Shared.java failing Contributed-by: Calvin Cheung